--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,170 @@
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arviz==0.11.2
-attrs==21.4.0
-backcall==0.2.0
-bleach==4.1.0
-Bottleneck==1.3.4
-certifi==2021.10.8
-cffi==1.15.0
-cftime==1.5.1.1
-colorama==0.4.4
-convertdate==2.3.2
-cycler==0.11.0
-Cython==0.29.28
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.3
-ephem==4.1.2
-fonttools==4.25.0
-hijri-converter==2.2.2
-holidays==0.11.3.1
-importlib-metadata==4.8.2
-ipykernel==6.9.1
-ipython==7.31.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-jedi==0.18.1
-Jinja2==3.0.3
-joblib==0.17.0
-jsonschema==3.2.0
-kiwisolver==1.3.2
-korean-lunar-calendar==0.2.1
-LunarCalendar==0.0.9
-MarkupSafe==2.0.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.2
-mistune==0.8.4
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-munkres==1.1.4
-nbclient==0.5.11
-nbconvert==6.1.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-netCDF4==1.5.7
-notebook==6.4.8
-numexpr==2.8.1
-numpy==1.21.5
-packaging==21.3
-pandas==1.3.4
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.0.1
-pip==21.2.4
-plotly==5.6.0
-prometheus-client==0.13.1
-prompt-toolkit==3.0.20
-prophet==1.0.1
-pycparser==2.21
-Pygments==2.11.2
-PyMeeus==0.5.11
-pyparsing==3.0.4
-pyrsistent==0.18.0
-pystan==2.19.1.1
-python-dateutil==2.8.2
-pytz==2021.3
-pywin32==302
-pywinpty==2.0.2
-pyzmq==22.3.0
-qtconsole==5.2.2
-QtPy==1.11.2
-scikit-learn==0.23.2
-scipy==1.7.3
-Send2Trash==1.8.0
-setuptools==58.0.4
-setuptools-git==1.2
-sip==4.19.13
-six==1.16.0
-tenacity==8.0.1
-tensorflow-gpu==2.7.0
-terminado==0.13.1
-testpath==0.5.0
-threadpoolctl==2.1.0
-tornado==6.1
-tqdm==4.63.0
-traitlets==5.1.1
-typing_extensions==4.1.1
-wcwidth==0.2.5
-webencodings==0.5.1
-wheel==0.37.1
-widgetsnbextension==3.5.2
-wincertstore==0.2
-xarray==0.20.1
-zipp==3.7.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+argon2-cffi=21.3.0=pyhd3eb1b0_0
+argon2-cffi-bindings=21.2.0=py37h2bbff1b_0
+arviz=0.11.2=pyhd3eb1b0_0
+attrs=21.4.0=pyhd3eb1b0_0
+backcall=0.2.0=pyhd3eb1b0_0
+blas=1.0=mkl
+bleach=4.1.0=pyhd3eb1b0_0
+bottleneck=1.3.4=py37h080aedc_0
+brotli=1.0.9=ha925a31_2
+bzip2=1.0.8=he774522_0
+ca-certificates=2022.3.18=haa95532_0
+certifi=2021.10.8=py37haa95532_2
+cffi=1.15.0=py37h2bbff1b_1
+cftime=1.5.1.1=py37h080aedc_0
+colorama=0.4.4=pyhd3eb1b0_0
+convertdate=2.3.2=pyhd3eb1b0_0
+curl=7.80.0=h2bbff1b_0
+cycler=0.11.0=pyhd3eb1b0_0
+cython=0.29.28=py37hd77b12b_0
+debugpy=1.5.1=py37hd77b12b_0
+decorator=5.1.1=pyhd3eb1b0_0
+defusedxml=0.7.1=pyhd3eb1b0_0
+entrypoints=0.3=py37_0
+ephem=4.1.2=py37h2bbff1b_0
+fonttools=4.25.0=pyhd3eb1b0_0
+freetype=2.10.4=hd328e21_0
+hdf4=4.2.13=h712560f_2
+hdf5=1.10.6=h7ebc959_0
+hijri-converter=2.2.2=pyhd3eb1b0_0
+holidays=0.11.3.1=pyhd3eb1b0_0
+icc_rt=2019.0.0=h0cc432a_1
+icu=58.2=ha925a31_3
+importlib-metadata=4.8.2=py37haa95532_0
+importlib_metadata=4.8.2=hd3eb1b0_0
+intel-openmp=2021.4.0=haa95532_3556
+ipykernel=6.9.1=py37haa95532_0
+ipython=7.31.1=py37haa95532_0
+ipython_genutils=0.2.0=pyhd3eb1b0_1
+ipywidgets=7.6.5=pyhd3eb1b0_1
+jedi=0.18.1=py37haa95532_1
+jinja2=3.0.3=pyhd3eb1b0_0
+joblib=0.17.0=py_0
+jpeg=9d=h2bbff1b_0
+jsonschema=3.2.0=pyhd3eb1b0_2
+jupyter=1.0.0=py37_7
+jupyter_client=7.1.2=pyhd3eb1b0_0
+jupyter_console=6.4.3=pyhd3eb1b0_0
+jupyter_core=4.9.2=py37haa95532_0
+jupyterlab_pygments=0.1.2=py_0
+jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
+kiwisolver=1.3.2=py37hd77b12b_0
+korean_lunar_calendar=0.2.1=pyhd3eb1b0_0
+libcurl=7.80.0=h86230a5_0
+libnetcdf=4.8.1=h6685c40_1
+libpng=1.6.37=h2a8f88b_0
+libpython=2.1=py37_0
+libssh2=1.9.0=h7a1dbc1_1
+libtiff=4.2.0=hd0e1b90_0
+libwebp=1.2.2=h2bbff1b_0
+libzip=1.5.1=h05fb217_1003
+lunarcalendar=0.0.9=pyhd3eb1b0_0
+lz4-c=1.9.3=h2bbff1b_1
+m2w64-binutils=2.25.1=5
+m2w64-bzip2=1.0.6=6
+m2w64-crt-git=5.0.0.4636.2595836=2
+m2w64-gcc=5.3.0=6
+m2w64-gcc-ada=5.3.0=6
+m2w64-gcc-fortran=5.3.0=6
+m2w64-gcc-libgfortran=5.3.0=6
+m2w64-gcc-libs=5.3.0=7
+m2w64-gcc-libs-core=5.3.0=7
+m2w64-gcc-objc=5.3.0=6
+m2w64-gmp=6.1.0=2
+m2w64-headers-git=5.0.0.4636.c0ad18a=2
+m2w64-isl=0.16.1=2
+m2w64-libiconv=1.14=6
+m2w64-libmangle-git=5.0.0.4509.2e5a9a2=2
+m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+m2w64-make=4.1.2351.a80a8b8=2
+m2w64-mpc=1.0.3=3
+m2w64-mpfr=3.1.4=4
+m2w64-pkg-config=0.29.1=2
+m2w64-toolchain=5.3.0=7
+m2w64-tools-git=5.0.0.4592.90b8472=2
+m2w64-windows-default-manifest=6.4=3
+m2w64-winpthreads-git=5.0.0.4634.697f757=2
+m2w64-zlib=1.2.8=10
+markupsafe=2.0.1=py37h2bbff1b_0
+matplotlib=3.5.1=py37haa95532_1
+matplotlib-base=3.5.1=py37hd77b12b_1
+matplotlib-inline=0.1.2=pyhd3eb1b0_2
+mistune=0.8.4=py37hfa6e2cd_1001
+mkl=2021.4.0=haa95532_640
+mkl-service=2.4.0=py37h2bbff1b_0
+mkl_fft=1.3.1=py37h277e83a_0
+mkl_random=1.2.2=py37hf11a4ad_0
+msys2-conda-epoch=20160418=1
+munkres=1.1.4=py_0
+nbclient=0.5.11=pyhd3eb1b0_0
+nbconvert=6.1.0=py37haa95532_0
+nbformat=5.1.3=pyhd3eb1b0_0
+nest-asyncio=1.5.1=pyhd3eb1b0_0
+netcdf4=1.5.7=py37h3de5c98_1
+notebook=6.4.8=py37haa95532_0
+numexpr=2.8.1=py37hb80d3ca_0
+numpy=1.21.5=py37ha4e8547_0
+numpy-base=1.21.5=py37hc2deb75_0
+openssl=1.1.1n=h2bbff1b_0
+packaging=21.3=pyhd3eb1b0_0
+pandas=1.3.4=py37h6214cd6_0
+pandocfilters=1.5.0=pyhd3eb1b0_0
+parso=0.8.3=pyhd3eb1b0_0
+pickleshare=0.7.5=pyhd3eb1b0_1003
+pillow=9.0.1=py37hdc2b20a_0
+pip=21.2.4=py37haa95532_0
+plotly=5.6.0=pyhd3eb1b0_0
+prometheus_client=0.13.1=pyhd3eb1b0_0
+prompt-toolkit=3.0.20=pyhd3eb1b0_0
+prompt_toolkit=3.0.20=hd3eb1b0_0
+prophet=1.0.1=py37haa95532_0
+pycparser=2.21=pyhd3eb1b0_0
+pygments=2.11.2=pyhd3eb1b0_0
+pymeeus=0.5.11=pyhd3eb1b0_1
+pyparsing=3.0.4=pyhd3eb1b0_0
+pyqt=5.9.2=py37hd77b12b_6
+pyrsistent=0.18.0=py37h196d8e1_0
+pystan=2.19.1.1=py37hac22706_0
+python=3.7.11=h6244533_0
+python-dateutil=2.8.2=pyhd3eb1b0_0
+pytz=2021.3=pyhd3eb1b0_0
+pywin32=302=py37h827c3e9_1
+pywinpty=2.0.2=py37h5da7b33_0
+pyzmq=22.3.0=py37hd77b12b_2
+qt=5.9.7=vc14h73c81de_0
+qtconsole=5.2.2=pyhd3eb1b0_0
+qtpy=1.11.2=pyhd3eb1b0_0
+scikit-learn=0.23.2=py37h47e9c7a_0
+scipy=1.7.3=py37h0a974cb_0
+send2trash=1.8.0=pyhd3eb1b0_1
+setuptools=58.0.4=py37haa95532_0
+setuptools-git=1.2=py37h28b3542_1
+sip=4.19.13=py37hd77b12b_0
+six=1.16.0=pyhd3eb1b0_1
+sqlite=3.38.0=h2bbff1b_0
+tenacity=8.0.1=py37haa95532_0
+terminado=0.13.1=py37haa95532_0
+testpath=0.5.0=pyhd3eb1b0_0
+threadpoolctl=2.1.0=pyh5ca1d4c_0
+tk=8.6.11=h2bbff1b_0
+tornado=6.1=py37h2bbff1b_0
+tqdm=4.63.0=pyhd3eb1b0_0
+traitlets=5.1.1=pyhd3eb1b0_0
+typing-extensions=4.1.1=hd3eb1b0_0
+typing_extensions=4.1.1=pyh06a4308_0
+vc=14.2=h21ff451_1
+vs2015_runtime=14.27.29016=h5e58377_2
+wcwidth=0.2.5=pyhd3eb1b0_0
+webencodings=0.5.1=py37_1
+wheel=0.37.1=pyhd3eb1b0_0
+widgetsnbextension=3.5.2=py37haa95532_0
+wincertstore=0.2=py37haa95532_2
+winpty=0.4.3=4
+xarray=0.20.1=pyhd3eb1b0_1
+xz=5.2.5=h62dcd97_0
+zipp=3.7.0=pyhd3eb1b0_0
+zlib=1.2.11=hbd8134f_5
+zstd=1.4.9=h19a0ad4_0
